# tbank_tinterest

./: docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routers/: auth.py  chats.py  misc.py  recommendations.py  survey.py  users.py
backend/app/core/: config.py  initial_data.py  logging_config.py  security.py  websockets.py
backend/app/data/: db.py
backend/app/data/models/: __init__.py  chat.py  interest.py  message.py  profile.py  user.py  user_interaction.py  user_interest.py
backend/app/dependencies/: auth.py
backend/app/schemas/: chat_schemas.py  survey_schemas.py  user_schemas.py
backend/app/services/: chat_service.py  recommendation_service.py  survey_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 3c4794d0aec8_init_tables.py  5b19217e678c_update_profile_interests_and_chat_models.py  bf64c291d25e_add_user_interactions.py  d9cc1a54998c_change_avatar_url_to_text_type.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/app/: router.jsx
frontend/src/app/layout/: Shell.jsx
frontend/src/pages/auth/: Auth.jsx
frontend/src/pages/chats/: Chats.jsx
frontend/src/pages/onboarding/: Questionnaire.jsx
frontend/src/pages/profile/: UserProfile.jsx
frontend/src/pages/recomendations/: People.jsx
frontend/src/pages/recommendations/: Groups.jsx  People.jsx
frontend/src/pages/settings/: Settings.jsx
(+2 files in other folders)
